--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -1,22 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
+<com.labo.kaji.millefeuille.ShadowCardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="400dp" />
+        android:layout_height="400dp"
+        android:background="#FFFFFF" />
 
     <View
+        android:id="@+id/label"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:background="#0099CC" />
+        android:layout_margin="8dp"
+        android:background="#66FFFFFF" />
 
     <TextView
+        android:id="@+id/text"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
+        android:layout_margin="8dp"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center"
         android:text="Hello"
-        android:layout_gravity="center" />
+        android:textColor="#FFFFFF"
+        android:textStyle="bold" />
 
-</android.support.v7.widget.CardView>
+</com.labo.kaji.millefeuille.ShadowCardView>
